# mc2err

./: .gitignore  CMakeLists.txt  README.md  README.rst  convolution.c  example.py  mc2err.c  mc2err.h  mc2err.py  mc2err_acf4eqp.cpp  mc2err_aggregate.c  mc2err_finalize.c  mc2err_initialize.c  mc2err_input.c  mc2err_internal.h  mc2err_output.c  mc2err_process.c  mc2err_transfer.c  setup.py
examples/: CMakeLists.txt  example1.c
src/: CMakeLists.txt  mc2err.h  mc2err_append.c  mc2err_begin.c  mc2err_clear.c  mc2err_create.c  mc2err_deallocate.c  mc2err_delete.c  mc2err_end.c  mc2err_expand.c  mc2err_initialize.c  mc2err_input.c  mc2err_internal.h  mc2err_load.c  mc2err_map.c  mc2err_merge.c  mc2err_save.c  mc2err_trim.c
src/old_src/: mc2err_analyze.c  mc2err_append.c  mc2err_end.c  mc2err_expand.c  mc2err_likelihood.c  mc2err_output.c  mc2err_save.c
